# systematic-trading

./: .gitignore  README.md  charts.py  cli.py  load_crypto_data.py  pyproject.toml  ruff.toml  strategy.py  synthetic_forecasts.py
